z-index added to solve bug with the top bar

--- a/assets/cv.css
+++ b/assets/cv.css
@@ -12,6 +12,7 @@ body
 	top: 0px;
 	left: 0px;
 	padding-left: 30px;
+	z-index: 10;
 }
 
 #body
